// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmissionsList renders correctly 1`] = `
<RCTScrollView
  ListFooterComponent={[Function]}
  data={
    Array [
      Object {
        "co2value": 20.0803,
        "data": Array [
          Object {
            "co2value": 20,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "md-build",
            "id": "1",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Custom",
            "value": 10,
          },
          Object {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "md-boat",
            "id": "12",
            "isMitigated": true,
            "onPress": [Function],
            "title": "Boat",
            "value": 100,
          },
        ],
        "date": "2020-03-01T00:00:00+00:00",
      },
      Object {
        "co2value": 60,
        "data": Array [
          Object {
            "co2value": 60,
            "creationDate": "2020-01-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "md-build",
            "id": "3",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Custom",
            "value": 30,
          },
        ],
        "date": "2020-01-01T00:00:00+00:00",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    Array [
      0,
      4,
    ]
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        co2value={20.0803}
        date="2020-03-01T00:00:00+00:00"
        monthlyCarbonBudget={24}
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <EmissionsListItem
        co2value={20}
        iconName="md-build"
        id="1"
        isMitigated={false}
        onPress={[Function]}
        title="Custom"
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <EmissionsListItem
        co2value={0.0803}
        iconName="md-boat"
        id="12"
        isMitigated={true}
        onPress={[Function]}
        title="Boat"
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        co2value={60}
        date="2020-01-01T00:00:00+00:00"
        monthlyCarbonBudget={24}
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <EmissionsListItem
        co2value={60}
        iconName="md-build"
        id="3"
        isMitigated={false}
        onPress={[Function]}
        title="Custom"
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "height": 100,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`EmissionsList renders correctly if no emissions 1`] = `
<RCTScrollView
  ListFooterComponent={[Function]}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "height": 100,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;
